--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "test:ui": "playwright test --ui"
   },
   "dependencies": {
+    "@hono/node-server": "^1.13.7",
+    "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-hover-card": "^1.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@supabase/supabase-js": "^2.47.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-kit": "^0.30.1",
+    "drizzle-orm": "^0.38.3",
     "framer-motion": "^11.17.0",
+    "hono": "^4.6.16",
     "lucide-react": "^0.471.0",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
