--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@hono/node-server": "^1.13.7",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-hover-card": "^1.1.4",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@supabase/supabase-js": "^2.47.12",
