--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 # Supabase - https://supabase.com/dashboard/project/_/settings/api
+# Development: http://127.0.0.1:54321
+# Staging: https://subkcevxjivxiiksnytj.supabase.co
+# Production: https://xiwnydehiplcjgrcjjko.supabase.co
 NEXT_PUBLIC_SUPABASE_URL=your-project-url
+
+# Development: local anon key
+# Staging: staging anon key from dashboard
+# Production: production anon key from dashboard
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
