--- a/package.json
+++ b/package.json
@@ -9,8 +9,24 @@
     "lint": "biome check .",
     "format": "biome format . --write",
     "icons": "bun scripts/generate-icons.ts",
+    "pretest": "bun run build",
     "test": "playwright test",
-    "test:ui": "playwright test --ui"
+    "test:ui": "playwright test --ui",
+    "db:start": "supabase start",
+    "db:stop": "supabase stop",
+    "db:reset": "supabase db reset",
+    "db:types": "supabase gen types typescript --local > src/types/supabase.ts",
+    "db:studio": "open http://localhost:54323",
+    "env:dev": "cp supabase/config.development.toml supabase/config.toml",
+    "env:staging": "cp supabase/config.staging.toml supabase/config.toml",
+    "env:prod": "cp supabase/config.production.toml supabase/config.toml",
+    "db:seed:dev": "supabase db reset --seed-file supabase/seed.sql",
+    "db:seed:staging": "psql $STAGING_DATABASE_URL -f supabase/seed.staging.sql",
+    "deploy:staging": "bunx supabase link --project-ref $STAGING_PROJECT_ID && bunx supabase db push",
+    "deploy:prod": "bunx supabase link --project-ref $PRODUCTION_PROJECT_ID && bunx supabase db push",
+    "db:backup": "pg_dump $DATABASE_URL > backup.sql",
+    "db:status": "supabase status",
+    "db:logs": "supabase logs"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
@@ -44,6 +60,7 @@
     "@types/react-dom": "^19.0.3",
     "postcss": "^8",
     "sharp": "^0.33.5",
+    "supabase": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
