--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "format": "biome format . --write",
     "icons": "bun scripts/generate-icons.ts",
     "pretest": "bun run build",
-    "test": "playwright test",
-    "test:ui": "playwright test --ui",
+    "test": "bun test",
+    "test:watch": "bun test --watch",
+    "test:ui": "bun test --ui",
+    "test:e2e": "playwright test tests/e2e",
+    "test:unit": "bun test tests/unit",
+    "test:integration": "bun test tests/integration",
+    "test:coverage": "bun test --coverage",
     "db:start": "supabase start",
     "db:stop": "supabase stop",
     "db:reset": "supabase db reset",
@@ -58,6 +63,7 @@
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.6",
     "@types/react-dom": "^19.0.3",
+    "bun-types": "^1.1.43",
     "postcss": "^8",
     "sharp": "^0.33.5",
     "supabase": "^2.2.1",
