chore: テスト実行用のスクリプトと設定を追加

--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "biome check .",
     "format": "biome format . --write",
     "icons": "bun scripts/generate-icons.ts",
-    "pretest": "bun run build",
-    "test": "bun test",
-    "test:watch": "bun test --watch",
-    "test:ui": "bun test --ui",
+    "pretest": "bun tests/scripts/setup.ts",
+    "test": "bun test tests/unit tests/integration",
+    "test:watch": "bun test tests/unit tests/integration --watch",
+    "test:ui": "bun test tests/unit tests/integration --ui",
     "test:e2e": "playwright test tests/e2e",
+    "test:e2e:ui": "playwright test tests/e2e --ui",
     "test:unit": "bun test tests/unit",
     "test:integration": "bun test tests/integration",
-    "test:coverage": "bun test --coverage",
+    "test:coverage": "bun test tests/unit tests/integration --coverage",
+    "test:setup": "bun tests/scripts/setup.ts",
+    "test:cleanup": "bun tests/scripts/cleanup.ts",
     "db:start": "supabase start",
     "db:stop": "supabase stop",
     "db:reset": "supabase db reset",
