--- a/package.json
+++ b/package.json
@@ -34,10 +34,21 @@
     "deploy:prod": "bunx supabase link --project-ref $PRODUCTION_PROJECT_ID && bunx supabase db push",
     "db:backup": "pg_dump $DATABASE_URL > backup.sql",
     "db:status": "supabase status",
-    "db:logs": "supabase logs"
+    "db:logs": "supabase logs",
+    "prepare": "husky install",
+    "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "bun run db:types",
+      "bunx tsc --noEmit",
+      "bun run lint",
+      "bun run format"
+    ]
   },
   "dependencies": {
     "@hono/node-server": "^1.13.7",
+    "@hono/zod-openapi": "^0.18.3",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-hover-card": "^1.1.4",
     "@radix-ui/react-icons": "^1.3.2",
@@ -57,16 +68,20 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@faker-js/faker": "^9.4.0",
     "@playwright/test": "^1.49.1",
     "@shadcn/ui": "^0.0.4",
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.6",
     "@types/react-dom": "^19.0.3",
     "bun-types": "^1.1.43",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.1",
     "postcss": "^8",
     "sharp": "^0.33.5",
     "supabase": "^2.2.1",
