--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,77 +9,50 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
 
+      - name: Setup Supabase CLI
+        uses: supabase/setup-cli@v1
+        with:
+          version: latest
+
       - name: Install dependencies
         run: bun install
 
-      - name: Run unit and integration tests
-        run: bun test
-        env:
-          CI: true
+      - name: Start Supabase
+        run: bun run db:start
 
-      - name: Install Playwright browsers
+      - name: Generate types
+        run: bun run db:types
+
+      - name: Type check
+        run: bunx tsc --noEmit
+
+      - name: Lint
+        run: bun run lint
+
+      - name: Unit & Integration tests
+        run: bun run test
+
+      - name: Install Playwright
         run: bunx playwright install --with-deps chromium
 
-      - name: Run E2E tests
-        run: bunx playwright test
-        env:
-          CI: true
-
-      - name: Upload test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: |
-            playwright-report/
-            coverage/
-            junit.xml
-
-  performance:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
-
-      - name: Install dependencies
-        run: bun install
-
-      - name: Build
-        run: bun run build
-        env:
-          CI: true
-
-      - name: Run Lighthouse CI
-        run: |
-          npm install -g @lhci/cli@0.13.x
-          lhci autorun
-        env:
-          LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
-
-      - name: Upload Lighthouse results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: lighthouse-results
-          path: .lighthouseci/
+      - name: E2E tests
+        run: bun run test:e2e
 
   deploy:
-    needs: [test, performance]
-    runs-on: ubuntu-latest
+    needs: test
     if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    environment: production
+
     steps:
       - uses: actions/checkout@v4
 
@@ -93,8 +66,6 @@ jobs:
 
       - name: Build
         run: bun run build
-        env:
-          CI: true
 
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v25
