--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,55 +1,46 @@
-name: バグレポート
-description: バグの報告や問題の指摘
-title: "[Bug]: "
+name: バグ報告
+description: プロジェクトのバグを報告する
 labels: ["bug"]
 body:
   - type: markdown
     attributes:
       value: |
-        バグの詳細な情報を提供してください。できるだけ具体的に記述することで、問題の特定と修正が容易になります。
-
-  - type: input
-    id: version
-    attributes:
-      label: バージョン
-      description: 問題が発生しているバージョン
-      placeholder: "例: v1.0.0"
-    validations:
-      required: true
+        バグ報告ありがとうございます。以下の情報を記入してください。
 
   - type: textarea
     id: description
     attributes:
       label: バグの説明
       description: バグの内容を詳しく説明してください
-      placeholder: |
-        例：
-        - 何が起きているか
-        - 期待される動作
-        - 実際の動作
-        - 再現手順
+      placeholder: バグの詳細な説明を記入してください
     validations:
       required: true
 
-  - type: dropdown
-    id: environment
+  - type: textarea
+    id: reproduction
     attributes:
-      label: 発生環境
-      description: バグが発生する環境を選択してください
-      multiple: true
-      options:
-        - 開発環境（localhost）
-        - ステージング環境
-        - 本番環境
-        - オフライン時
+      label: 再現手順
+      description: バグを再現するための手順を記入してください
+      placeholder: |
+        1. '...' に移動
+        2. '....' をクリック
+        3. '....' までスクロール
+        4. エラーが発生
+    validations:
+      required: true
+
+  - type: textarea
+    id: expected
+    attributes:
+      label: 期待される動作
+      description: 本来期待される動作を説明してください
     validations:
       required: true
 
   - type: dropdown
     id: browsers
     attributes:
-      label: ブラウザ
-      description: 問題が発生するブラウザを選択してください
+      label: 影響のあるブラウザ
       multiple: true
       options:
         - Chrome
@@ -57,38 +48,23 @@ body:
         - Safari
         - Edge
         - その他
-    validations:
-      required: true
 
-  - type: textarea
-    id: performance
+  - type: input
+    id: version
     attributes:
-      label: パフォーマンス情報
-      description: パフォーマンスに関する問題の場合、以下の情報を提供してください
-      value: |
-        ### Lighthouseスコア
-        - Performance: 
-        - Accessibility: 
-        - Best Practices: 
-        - SEO: 
-        - PWA: 
-
-        ### Web Vitals
-        - FCP (First Contentful Paint): 
-        - LCP (Largest Contentful Paint): 
-        - TTI (Time to Interactive): 
-        - TBT (Total Blocking Time): 
-        - CLS (Cumulative Layout Shift): 
+      label: バージョン
+      description: 使用しているバージョンを記入してください
+      placeholder: v1.0.0
 
   - type: textarea
     id: logs
     attributes:
-      label: エラーログ
-      description: 関連するエラーログやコンソール出力を提供してください
+      label: 関連するログ出力
+      description: エラーログやコンソール出力があれば記入してください
       render: shell
 
   - type: textarea
     id: additional
     attributes:
       label: 追加情報
-      description: その他、問題解決に役立つ情報があれば記入してください
+      description: その他、関連する情報があれば記入してください
