--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,107 +1,62 @@
-name: 機能要望
-description: 新機能の提案や既存機能の改善要望
-title: "[Feature Request]: "
+name: 機能リクエスト
+description: 新機能の提案や改善要望
 labels: ["enhancement"]
 body:
   - type: markdown
     attributes:
       value: |
-        新機能の提案や既存機能の改善要望について、できるだけ具体的に記述してください。
-        提案の背景や期待される効果を含めることで、より良い議論が可能になります。
+        機能リクエストありがとうございます。以下の情報を記入してください。
 
   - type: textarea
     id: problem
     attributes:
-      label: 現状の課題
-      description: 解決したい問題や課題について説明してください
-      placeholder: |
-        例：
-        - 現在の機能では○○ができない
-        - ××の操作が煩雑で使いづらい
-        - △△の機能が不足している
+      label: 関連する問題
+      description: この機能リクエストが解決する問題について説明してください
+      placeholder: 例）いつも〜の作業で困っています
     validations:
       required: true
 
   - type: textarea
     id: solution
     attributes:
-      label: 提案内容
-      description: 具体的な解決策や新機能の提案を記述してください
-      placeholder: |
-        例：
-        - 新しい機能の概要
-        - 期待される動作
-        - 想定されるユースケース
+      label: 提案する解決策
+      description: どのような機能や改善を希望されますか？
+      placeholder: 例）〜のような機能があれば便利だと思います
     validations:
       required: true
-
-  - type: dropdown
-    id: feature_type
-    attributes:
-      label: 機能タイプ
-      description: 提案する機能のタイプを選択してください
-      multiple: true
-      options:
-        - UIコンポーネント
-        - PWA機能
-        - パフォーマンス最適化
-        - セキュリティ強化
-        - API機能
-        - テスト改善
-        - ドキュメント
-        - その他
-    validations:
-      required: true
-
-  - type: textarea
-    id: technical_details
-    attributes:
-      label: 技術的な詳細
-      description: 実装に関する技術的な提案や考慮点があれば記述してください
-      value: |
-        ### 想定される実装方法
-        ```typescript
-        // 実装のサンプルコードや疑似コード
-        ```
-
-        ### 技術的な考慮点
-        - パフォーマンスへの影響
-        - セキュリティ上の考慮
-        - 既存機能との整合性
 
   - type: textarea
     id: alternatives
     attributes:
       label: 代替案
-      description: 他に検討した解決策があれば記述してください
-      placeholder: |
-        例：
-        - 別のアプローチ
-        - 既存機能の活用方法
-        - 他のツールやライブラリの利用
+      description: 検討された他の解決策があれば記入してください
+      placeholder: 例）〜という方法も考えましたが...
 
   - type: textarea
-    id: impact
+    id: context
     attributes:
-      label: 期待される効果
-      description: この機能追加による具体的な効果や利点を記述してください
-      placeholder: |
-        例：
-        - ユーザビリティの向上
-        - パフォーマンスの改善
-        - 開発効率の向上
+      label: 追加のコンテキスト
+      description: この機能に関連する追加情報や背景があれば記入してください
+
+  - type: dropdown
+    id: priority
+    attributes:
+      label: 優先度
+      description: この機能の優先度をどのように考えていますか？
+      options:
+        - 高（すぐに必要）
+        - 中（あると便利）
+        - 低（いつか欲しい）
+    validations:
+      required: true
 
   - type: checkboxes
-    id: requirements
+    id: terms
     attributes:
-      label: 要件チェック
-      description: 提案内容が以下の要件を満たしているか確認してください
+      label: 確認事項
+      description: 提案する前に以下の項目を確認してください
       options:
-        - label: プロジェクトのコンセプトに合致している
+        - label: 既存のIssueで同様の提案がないことを確認しました
           required: true
-        - label: パフォーマンス要件（Lighthouseスコア90以上）を考慮している
-          required: true
-        - label: アクセシビリティを考慮している
-          required: true
-        - label: セキュリティ要件を考慮している
+        - label: この機能が本プロジェクトの目的に沿っていることを確認しました
           required: true
