--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@
 # misc
 .DS_Store
 *.pem
+.secrets
 
 # debug
 npm-debug.log*
@@ -44,6 +45,7 @@ next-env.d.ts
 # test
 playwright-report
 test-results
+.next-test.config.ts
 
 # Test reports
 tests/reports/
