設定: 開発環境の設定ファイルを更新

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
+# Environment
+# development: ローカル開発環境
+# staging: ステージング環境
+# production: 本番環境
+NODE_ENV=development
+
+# Data Source Provider
+# mock: モックデータを使用（開発・テスト用）
+# supabase: Supabaseを使用（開発・本番用）
+NEXT_PUBLIC_DATA_SOURCE_PROVIDER=mock
+
 # Supabase - https://supabase.com/dashboard/project/_/settings/api
 # Development: http://127.0.0.1:54321
 # Staging: https://subkcevxjivxiiksnytj.supabase.co
@@ -8,3 +19,10 @@ NEXT_PUBLIC_SUPABASE_URL=your-project-url
 # Staging: staging anon key from dashboard
 # Production: production anon key from dashboard
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+
+# Database Configuration
+# Development: enabled=true, timeout=5000
+# Staging: enabled=true, timeout=3000
+# Production: enabled=true, timeout=2000
+NEXT_PUBLIC_DATABASE_CACHE_ENABLED=true
+NEXT_PUBLIC_DATABASE_CACHE_TIMEOUT=5000
