--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -24,7 +24,8 @@ jobs:
           path: |
             ~/.bun/install/cache
             .next/cache
-          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lockb') }}
+            /root/.cache/puppeteer
+          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lockb', '**/package.json') }}
           restore-keys: |
             ${{ runner.os }}-bun-
 
@@ -39,9 +40,7 @@ jobs:
           NODE_ENV: production
 
       - name: Run Lighthouse CI
-        run: |
-          npm install -g @lhci/cli@0.13.x
-          lhci autorun
+        run: bun run test:lighthouse
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
 
@@ -55,11 +54,60 @@ jobs:
         if: failure()
         uses: actions/github-script@v7
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const issue = await github.rest.issues.create({
+            const fs = require('fs');
+            let errorDetails = 'No detailed results available';
+            
+            try {
+              const files = fs.readdirSync('.lighthouseci').filter(f => f.endsWith('.json'));
+              if (files.length > 0) {
+                const results = files.map(f => JSON.parse(fs.readFileSync(`.lighthouseci/${f}`)))
+                  .filter(r => r.categories?.performance?.score < 0.9);
+                
+                if (results.length > 0) {
+                  errorDetails = results.map(r => {
+                    const score = (r.categories.performance.score * 100).toFixed(1);
+                    const fcp = (r.audits['first-contentful-paint'].numericValue / 1000).toFixed(2);
+                    const tti = (r.audits.interactive.numericValue / 1000).toFixed(2);
+                    const tbt = r.audits['total-blocking-time'].numericValue.toFixed(0);
+                    const cls = r.audits['cumulative-layout-shift'].numericValue.toFixed(3);
+                    const lcp = (r.audits['largest-contentful-paint'].numericValue / 1000).toFixed(2);
+                    
+                    return [
+                      `Performance Score: ${score}%`,
+                      `First Contentful Paint: ${fcp}s`,
+                      `Time to Interactive: ${tti}s`,
+                      `Total Blocking Time: ${tbt}ms`,
+                      `Cumulative Layout Shift: ${cls}`,
+                      `Largest Contentful Paint: ${lcp}s`
+                    ].join('\n');
+                  }).join('\n\n');
+                }
+              }
+            } catch (e) {
+              errorDetails = `Error parsing results: ${e.message}`;
+            }
+            
+            const issueBody = [
+              `Lighthouse CI failed on commit ${context.sha}`,
+              '',
+              '### Performance Metrics',
+              '```',
+              errorDetails,
+              '```',
+              '',
+              '### Links',
+              `- [Workflow Run](${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId})`,
+              `- [Commit](${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/commit/${context.sha})`,
+              '',
+              'Please review the performance metrics and make necessary optimizations.'
+            ].join('\n');
+            
+            await github.rest.issues.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              title: '🚨 Lighthouse CI failed',
-              body: `Lighthouse CI failed on commit ${context.sha}. Please check the [workflow run](${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}) for details.`
+              title: '🚨 Lighthouse CI Failed: Performance Issues Detected',
+              body: issueBody,
+              labels: ['performance', 'lighthouse-ci']
             });
-            console.log(`Created issue #${issue.data.number}`);
