--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,5 +1,5 @@
-# Staging environment configuration
-project_id = "next-pwa-starter-staging"
+# Development environment configuration
+project_id = "local"
 
 [api]
 enabled = true
@@ -9,7 +9,7 @@ extra_search_path = ["public", "extensions"]
 max_rows = 1000
 
 [api.tls]
-enabled = true
+enabled = false
 
 [db]
 port = 54322
@@ -17,7 +17,7 @@ shadow_port = 54320
 major_version = 15
 
 [db.pooler]
-enabled = true
+enabled = false
 port = 54329
 pool_mode = "transaction"
 default_pool_size = 20
@@ -25,7 +25,7 @@ max_client_conn = 100
 
 [db.seed]
 enabled = true
-sql_paths = ['./seed.staging.sql']
+sql_paths = ['./seed.sql']
 
 [realtime]
 enabled = true
@@ -33,7 +33,7 @@ enabled = true
 [studio]
 enabled = true
 port = 54323
-api_url = "https://staging-api.example.com"
+api_url = "http://127.0.0.1"
 
 [storage]
 enabled = true
@@ -41,8 +41,8 @@ file_size_limit = "50MiB"
 
 [auth]
 enabled = true
-site_url = "https://staging.example.com"
-additional_redirect_urls = ["https://staging.example.com"]
+site_url = "http://127.0.0.1:3000"
+additional_redirect_urls = ["https://127.0.0.1:3000"]
 jwt_expiry = 3600
 enable_refresh_token_rotation = true
 refresh_token_reuse_interval = 10
@@ -51,7 +51,7 @@ enable_signup = true
 [auth.email]
 enable_signup = true
 double_confirm_changes = true
-enable_confirmations = true
+enable_confirmations = false
 
 [analytics]
 enabled = true
