--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -33,6 +33,12 @@ jobs:
       - name: Install dependencies
         run: bun install
 
+      - name: Test Supabase Connection
+        run: bun tests/scripts/test-supabase-connection.ts
+        env:
+          NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
+          NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
+
       - name: Build
         run: bun run build
         env:
