--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -58,6 +58,70 @@ jobs:
           NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
           NODE_ENV: production
 
+      - name: Update README with Lighthouse scores
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const fs = require('fs');
+            
+            try {
+              const files = fs.readdirSync('.lighthouseci').filter(f => f.endsWith('.json'));
+              if (files.length > 0) {
+                const results = files.map(f => JSON.parse(fs.readFileSync(`.lighthouseci/${f}`)));
+                const latestResult = results[0];
+                
+                const scores = {
+                  performance: (latestResult.categories.performance.score * 100).toFixed(0),
+                  accessibility: (latestResult.categories.accessibility.score * 100).toFixed(0),
+                  bestPractices: (latestResult.categories['best-practices'].score * 100).toFixed(0),
+                  seo: (latestResult.categories.seo.score * 100).toFixed(0),
+                  pwa: (latestResult.categories.pwa.score * 100).toFixed(0)
+                };
+                
+                const readmePath = 'README.md';
+                let readme = fs.readFileSync(readmePath, 'utf8');
+                
+                const workflowUrl = `${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/actions/workflows/lighthouse.yml`;
+                
+                const lines = [
+                  '## Lighthouse スコア',
+                  '',
+                  `[![Performance: ${scores.performance}](https://img.shields.io/badge/Performance-${scores.performance}%25-${scores.performance >= 90 ? 'success' : 'orange'})](${workflowUrl})`,
+                  `[![Accessibility: ${scores.accessibility}](https://img.shields.io/badge/Accessibility-${scores.accessibility}%25-${scores.accessibility >= 90 ? 'success' : 'orange'})](${workflowUrl})`,
+                  `[![Best Practices: ${scores.bestPractices}](https://img.shields.io/badge/Best%20Practices-${scores.bestPractices}%25-${scores.bestPractices >= 90 ? 'success' : 'orange'})](${workflowUrl})`,
+                  `[![SEO: ${scores.seo}](https://img.shields.io/badge/SEO-${scores.seo}%25-${scores.seo >= 90 ? 'success' : 'orange'})](${workflowUrl})`,
+                  `[![PWA: ${scores.pwa}](https://img.shields.io/badge/PWA-${scores.pwa}%25-${scores.pwa >= 90 ? 'success' : 'orange'})](${workflowUrl})`,
+                  '',
+                  `*Last updated: ${new Date().toISOString().split('T')[0]}*`,
+                  ''
+                ];
+
+                const scoreSection = lines.join('\n');
+                const lighthouseRegex = /## Lighthouse スコア[\s\S]*?\n\n/;
+                
+                if (lighthouseRegex.test(readme)) {
+                  readme = readme.replace(lighthouseRegex, scoreSection);
+                } else {
+                  const featuresIndex = readme.indexOf('## 特徴');
+                  if (featuresIndex !== -1) {
+                    readme = readme.slice(0, featuresIndex) + scoreSection + readme.slice(featuresIndex);
+                  }
+                }
+                
+                fs.writeFileSync(readmePath, readme);
+                
+                const exec = require('child_process').execSync;
+                exec('git config --global user.name "github-actions[bot]"');
+                exec('git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"');
+                exec('git add README.md');
+                exec('git commit -m "docs: 🚀 Lighthouseスコアを更新"');
+                exec('git push');
+              }
+            } catch (e) {
+              console.error('Error updating README:', e);
+            }
+
       - name: Save Lighthouse results
         uses: actions/upload-artifact@v3
         with:
