fix: 🐛 Next.jsビルドエラーを修正

--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
     "test:performance": "bun test tests/performance/cache-strategy.test.ts",
     "test:performance:report": "bun run build && bun run test:performance:run",
     "test:performance:run": "start-server-and-test start http://localhost:3000 'bun tests/scripts/run-performance-tests.ts'",
-    "test:lighthouse": "start-server-and-test start http://localhost:3000 'bun tests/scripts/run-lighthouse.ts'",
-    "test:all": "bun run test && bun run test:e2e && bun run test:lighthouse && bun run test:performance:report",
+    "lighthouse": "bunx @lhci/cli@0.14.x collect --url=http://localhost:3000 --settings.preset=desktop",
+    "lighthouse:mobile": "bunx @lhci/cli@0.14.x collect --url=http://localhost:3000 --settings.preset=mobile",
+    "lighthouse:compare": "bunx @lhci/cli@0.14.x collect --url=http://localhost:3000 --url=https://production-url.com --settings.preset=desktop",
+    "lighthouse:debug": "CHROME_DEBUG_PORT=9222 bunx @lhci/cli@0.14.x collect --url=http://localhost:3000 --settings.preset=desktop --settings.chromeFlags=\"--remote-debugging-port=9222\"",
+    "test:all": "bun run test && bun run test:e2e && bun run test:performance:report",
     "db:start": "supabase start",
     "db:stop": "supabase stop",
     "db:reset": "supabase db reset",
